Town6: Sidebar make person function as wide as document names and map
TYPE: Feature
LINK: None

--- a/src/onegov/town6/theme/styles/town6.scss
+++ b/src/onegov/town6/theme/styles/town6.scss
@@ -655,6 +655,7 @@ $pageref-color-hover: $iron;
 
                 &.preview {
                     color: $monsoon;
+                    padding-right: 0;
                 }
             }
 
