--- a/src/onegov/feriennet/theme/styles/feriennet.scss
+++ b/src/onegov/feriennet/theme/styles/feriennet.scss
@@ -1353,17 +1353,17 @@ $booking-left-margin: 1.6rem;
 
         td:nth-child(3),
         th:nth-child(3) {
-            width: 2.5%;
+            width: 2%;
         }
 
         td:nth-child(4),
         th:nth-child(4) {
-            width: 18.5%;
+            width: 19.5%;
         }
 
         td:nth-child(5),
         th:nth-child(5) {
-            width: 17.5%;
+            width: 18.5%;
         }
 
         td:nth-child(6),
@@ -1397,6 +1397,7 @@ $booking-left-margin: 1.6rem;
 
         td:first-child {
             padding-right: 0;
+            padding-left: .5rem !important;
             text-align: center;
             width: 5px;
 
@@ -1410,9 +1411,13 @@ $booking-left-margin: 1.6rem;
             }
         }
 
-        td:last-child::before {
-            content: '';
-            display: none;
+        td:last-child {
+            padding-right: .5rem !important;
+
+            &::before {
+                content: '';
+                display: none;
+            }
         }
 
         ul li {
@@ -1755,7 +1760,7 @@ $booking-left-margin: 1.6rem;
 
         td {
             border: 0;
-            padding-bottom: .25rem;
+            padding-bottom: .4rem;
             padding-top: .25rem;
         }
 
@@ -1785,9 +1790,8 @@ $booking-left-margin: 1.6rem;
             padding-right: 1.5rem;
         }
 
-        .total td {
-            padding-bottom: .5rem;
-            padding-top: .5rem;
+        tr:has(+ tr.total) td {
+            padding-bottom: 2rem;
         }
 
         .total td:last-child {
@@ -1804,14 +1808,6 @@ $booking-left-margin: 1.6rem;
         .group td:first-child {
             text-decoration: underline;
             text-decoration-color: $body-font-color;
-        }
-
-        tbody tr:nth-last-child(2) td {
-            // make sure the backgrounds of all item lines cover the same
-            // height, here we mask the extended height of the row with
-            // a white box-shadow
-            box-shadow: 0 -.75rem $white inset;
-            padding-bottom: 1rem;
         }
 
         .item-red {
@@ -1881,7 +1877,7 @@ $booking-left-margin: 1.6rem;
     }
 
     .remove-manual::before {
-        @include icon('\f1f8');
+        @include icon-bold('\f1f8');
         margin-right: 1.25ex;
     }
 
@@ -2036,11 +2032,6 @@ $booking-left-margin: 1.6rem;
         flex-grow: 1;
     }
 
-    .donation-button {
-        margin: 0;
-        position: absolute;
-        right: -.5rem;
-    }
 
     .item-group:first-child {
         margin-top: 0;
@@ -2636,17 +2627,15 @@ $booking-left-margin: 1.6rem;
     }
 
     > * {
-
         div {
             font-size: .875rem;
         }
+    }
 
-        a {
-            display: inline-block;
-            font-size: .875rem;
-            margin-right: 1rem;
-        }
-
+    .factoids a {
+        display: inline-block;
+        font-size: .875rem;
+        margin-right: 1rem;
     }
 
     > li {
@@ -3020,24 +3009,22 @@ $booking-left-margin: 1.6rem;
 /*
     Donation button
 */
+.donate {
+    text-align: right;
+}
+
 .donation-button {
-    border: 1px solid $green-light;
-    border-radius: 4px;
-    color: $green-dark;
     font-size: 1rem;
     font-weight: bold;
 
-    &:hover {
-        color: $green-dark;
-    }
-
     span::after {
-        @include icon('\f08a');
+        @include icon('\f004');
         margin-left: .75ex;
     }
 
     &:hover span::after {
         content: '\f004';
+        font-weight: bold;
     }
 }
 
