Town6: Make the context-specific-function multi line capable.
TYPE: Feature
LINK: OGC-1955

--- a/src/onegov/town6/theme/styles/person.scss
+++ b/src/onegov/town6/theme/styles/person.scss
@@ -209,6 +209,10 @@ Person card in lists
     }
 }
 
+
+.list-lead.preview {
+    white-space: pre-line; /* Preserves line breaks */
+}
 /*
     A-Z Blocks
 */
