--- a/src/onegov/town6/theme/styles/payment.scss
+++ b/src/onegov/town6/theme/styles/payment.scss
@@ -27,8 +27,9 @@
         margin: 0 0 .5rem;
 
         &::before {
-            @include icon('\f1f5');
+            @include icon-bold('\f1f5');
             margin-right: 1.5ex;
+            font-family: "Font Awesome 5 Brands";
         }
     }
 }
