--- a/src/onegov/feriennet/theme/styles/feriennet.scss
+++ b/src/onegov/feriennet/theme/styles/feriennet.scss
@@ -1,4 +1,10 @@
-$max-line-width: 40rem;
+$max-line-width: 45rem;
+
+
+.limit-line-width {
+    max-width: $max-line-width;
+}
+
 
 /*
     css animations keyframes
