Start adding the contact link
We are limited by the CSS, to show the fields side by side

--- a/src/onegov/org/theme/styles/org.scss
+++ b/src/onegov/org/theme/styles/org.scss
@@ -6768,3 +6768,11 @@ a#results {
         list-style: none;
     }
 }
+
+// Custom styling for a specifc form field
+.formfields input.side-by-side-form-fields {
+    width: 50%!important;
+    display: inline-block;
+    color: red;
+}
+
