--- a/src/onegov/town6/theme/styles/forms.scss
+++ b/src/onegov/town6/theme/styles/forms.scss
@@ -537,3 +537,13 @@ p.file-title {
         cursor: pointer !important;
     }
 }
+
+.formfields > div:has(input.side-by-side-form-fields) {
+    width: 50%;
+    display: inline-block;
+}
+
+input.side-by-side-form-fields {
+    width: 100%;
+}
+
