--- a/src/onegov/landsgemeinde/theme/styles/landsgemeinde.scss
+++ b/src/onegov/landsgemeinde/theme/styles/landsgemeinde.scss
@@ -349,6 +349,14 @@ h1.main-title small {
 
 
 /* Side panel*/
+
+.assembly-toggler {
+    background: $primary-color;
+    opacity: .6;
+    padding-right: .6rem;
+    top: calc(80vh - 50px);
+}
+
 .agenda-item-list.with-current {
     height: 25rem;
     overflow-y: scroll;
@@ -635,5 +643,4 @@ h1.main-title small {
             }
         }
     }
-
 }
