--- a/src/onegov/town6/theme/styles/town6.scss
+++ b/src/onegov/town6/theme/styles/town6.scss
@@ -443,6 +443,29 @@ input[type="url"] {
         }
     }
 
+    *:first-child.fa:has(+ span) {
+        margin-right: .5rem;
+    }
+
+}
+
+.download-button {
+    display: block;
+    width: fit-content;
+    border-radius: .7rem;
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+    border: 1px solid  $primary-color;
+    padding: 1rem;
+    transition: background 200ms linear;
+
+    &:hover {
+        background: $white-smoke;
+    }
+
+    .fa {
+        margin-right: .5rem;
+    }
 }
 
 // like above, but no border, no hover effect
