Town6: Sidebar-toggler bottom
Restyle the sidebar-toggler so it is fixed to the bottom and more visible.

TYPE: Feature
LINK: OGC-1985

--- a/src/onegov/landsgemeinde/theme/styles/landsgemeinde.scss
+++ b/src/onegov/landsgemeinde/theme/styles/landsgemeinde.scss
@@ -347,8 +347,12 @@ h1.main-title small {
     }
 }
 
-
 /* Side panel*/
+
+.sidebar-toggler .text{
+    margin-bottom: -2px;
+}
+
 .agenda-item-list.with-current {
     height: 25rem;
     overflow-y: scroll;
@@ -635,5 +639,4 @@ h1.main-title small {
             }
         }
     }
-
 }
