--- a/src/onegov/town6/theme/styles/dashboard.scss
+++ b/src/onegov/town6/theme/styles/dashboard.scss
@@ -37,7 +37,20 @@
     .title {
         font-weight: normal;
     }
+
+    .fact-number,
+    .fact-icon {
+        background: $white;
+        padding: .2rem .5rem;
+        margin-bottom: .2rem;
+        border-radius: .2rem;
+    }
+
+    ul .small {
+        margin-bottom: .2rem;
+    }
 }
+
 
 @include breakpoint(medium only) {
     .boardlet {
