--- a/src/onegov/town6/theme/styles/dashboard.scss
+++ b/src/onegov/town6/theme/styles/dashboard.scss
@@ -1,38 +1,83 @@
 /*
     Dashboard
 */
-.boardlet-group {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-}
 
 .boardlet {
-    background: $gray-pastel;
-    border-top: 10px solid $green-light;
+    background: $white-smoke;
     margin-bottom: 1.5rem;
-    padding: .5rem 1rem 1rem;
-    width: calc((100% / 3) - 1rem);
+    border-top: 5px solid $green-light;
+    padding: 1rem;
+    border-radius: .7rem;
 
-    h2 {
-        font-size: 1.3rem;
-        font-weight: bold;
-        text-align: center;
-        word-wrap: break-word;
+    h2.h4 {
+        margin-bottom: 1rem;
+        margin-top: -.2rem;
     }
 
     li {
-        font-size: .9rem;
-    }
+        &.boardlet-failure {
+            border-top-color: $red-light;
+        }
 
-    &.boardlet-warning {
-        border-top-color: $yellow-light;
-    }
+        h2.h4 {
+            padding: .5rem;
+            background: $white;
+            text-align: center;
+            border-radius: .7rem;
+        }
 
-    &.boardlet-failure {
-        border-top-color: $red-light;
+        .title {
+            font-weight: normal;
+        }
+
+        .facts {
+            width: 100%;
+            table-layout: auto;
+            border-collapse: collapse;
+
+            tbody {
+                background: transparent;
+            }
+
+            tr {
+                background: transparent;
+
+                &.none {
+                    color: $base;
+                }
+            }
+
+            td {
+                padding: .2rem 0;
+                background: transparent;
+            }
+
+            td:first-child {
+                white-space: nowrap;
+                width: 1%;
+            }
+        }
+
+        .fact-number,
+        .fact-icon {
+            background: $white;
+            padding: .2rem .5rem;
+            border-radius: .2rem;
+            width: 100%;
+            display: block;
+            text-align: right;
+        }
+
+        .fact-icon {
+            padding: .3rem;
+        }
+
+        .fact-text {
+            margin-left: .5rem;
+        }
     }
 }
+
 
 @include breakpoint(medium only) {
     .boardlet {
