--- a/src/onegov/town6/theme/styles/homepage.scss
+++ b/src/onegov/town6/theme/styles/homepage.scss
@@ -61,11 +61,14 @@
                 color: $white;
                 font-size: 1.6rem;
                 text-shadow: none;
-                font-weight: bold;
                 padding: 1.5rem 2.5rem !important;
 
                 &:hover {
                     padding: 1.5rem 3rem !important;
+                }
+
+                i.fa-external-link-alt {
+                    margin-left: .5rem;
                 }
             }
 
@@ -78,6 +81,15 @@
 
             @media #{$small-only} {
                 bottom: 2rem;
+
+                a {
+                    font-size: 1.2rem;
+                    padding: .7rem 1.5rem !important;
+
+                    &:hover {
+                        padding: .7rem 2rem !important;
+                    }
+                }
             }
 
         }
