Fixes icons and activity invoice payments via datatrans

--- a/src/onegov/town6/theme/styles/header.scss
+++ b/src/onegov/town6/theme/styles/header.scss
@@ -47,6 +47,7 @@ $new-photo-album: '\f03e';
 $new-registration-window: '\f067';
 $new-reservation-icon: '\f271';
 $new-room-icon: '\f015';
+$new-datatrans-icon: '\f09d';
 $new-stripe-connect-icon: '\f1f5';
 $new-user-icon: '\f234';
 $new-text-module-icon: '\f249';
@@ -544,6 +545,7 @@ $editbar-fg-color-active: $white;
     .new-registration-window::before { @include icon-bold($new-registration-window); }
     .new-reservation::before { @include icon($new-reservation-icon); }
     .new-room::before { @include icon-bold($new-room-icon); }
+    .new-datatrans::before { @include icon($new-datatrans-icon); }
     .new-stripe-connect::before { @include icon($new-stripe-connect-icon); }
     .new-user::before { @include icon-bold($new-user-icon); }
     .new-text-module::before { @include icon($new-text-module-icon); }
