--- a/src/onegov/town6/theme/styles/payment.scss
+++ b/src/onegov/town6/theme/styles/payment.scss
@@ -25,11 +25,16 @@
         font-size: 1rem;
         font-weight: bold;
         margin: 0 0 .5rem;
+    }
 
-        &::before {
-            @include icon('\f1f5');
-            margin-right: 1.5ex;
-        }
+    .payment-provider-stripe-connect h2::before {
+        @include icon('\f1f5');
+        margin-right: 1.5ex;
+    }
+
+    .payment-provider-datatrans h2::before {
+        @include icon('\f09d');
+        margin-right: 1.5ex;
     }
 }
 
